syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.anaconda.skein";
option java_outer_classname = "SkeinProto";

package skein;

service Demo {
  rpc getKey (GetRequest) returns (GetReply) {}
  rpc setKey (SetRequest) returns (SetReply) {}
}

message GetRequest {
  string key = 1;
  bool wait = 2;
}

message GetReply {
  string val = 1;
}

message SetRequest {
  string key = 1;
  string val = 2;
}

message SetReply {
}
